--- a/Day5/Responsive menu/nav.html
+++ b/Day5/Responsive menu/nav.html
@@ -1,31 +1,21 @@
-<!DOCTYPE html>
-
+<!DOCTYPE >
+<html>
 <head>
-    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="nav_new.css">
     <title>Responsive Menu with JS Toggle</title>
 </head>
 
 <body>
-    <h1>hello</h1>
-    <nav>
-        <div id="hamburger">
-            <div id="bar1"></div>
-            <div id="bar2"></div>
-            <div id="bar3"></div>
-        </div>
-        <h2>dgfd</h2>
-
-        <div class="navMenu">
-            <ul>
-                <li>Skills</li>
-                <li>Portfolio</li>
-                <li>Services</li>
-                <li>Contact</li>
-                <li>Resume</li>
-            </ul>
-        </div>
-    </nav>
-    <script src="nav.js"></script>
+    <div class="topnav" id="myTopnav">
+        <a href="#home" class="active">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+      <script src="nav.js"></script>
 </body>
 
 </html>
