--- a/Day5/Responsive menu/nav.html
+++ b/Day5/Responsive menu/nav.html
@@ -1,7 +1,8 @@
 <!DOCTYPE >
 <html>
 <head>
-    <link rel="stylesheet" href="nav_new.css">
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Responsive Menu with JS Toggle</title>
 </head>
 
@@ -15,6 +16,7 @@
           <i class="fa fa-bars"></i>
         </a>
       </div>
+      <div style="padding-left:16px">
       <script src="nav.js"></script>
 </body>
 
