--- a/Engine_Front/register.html
+++ b/Engine_Front/register.html
@@ -25,12 +25,6 @@
         <button type="button" onclick="go_to_another_file()">Next</button>
     </form>
 
-    <script>
-        function go_to_another_file()
-        {
-            document.getElementById("data").submit();
-            window.location.href = "creat_passwd.html";
-        }
-    </script>
+    <script src="register.js"> </script>
 </body>
 </html>
